[gd_scene load_steps=2 format=3 uid="uid://c6r1ot6xo36kd"]

[ext_resource type="Script" uid="uid://cponlx207pav8" path="res://Scripts/UI/NewLevelUpScreen.gd" id="1_arucj"]

[node name="NewLevelUpScreen" type="CanvasLayer"]
script = ExtResource("1_arucj")

[node name="DimBackground" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.08, 0.08, 0.08, 0.501961)

[node name="CardsContainer" type="HBoxContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1
